test/classes/deitz/test_bad_function_noparens.chpl
fun bar {
  writeln("this is not allowed");
}

bar;
